# diet

./: .gitignore  LICENSE  README.md  default.nix  diet.cabal  shell.nix
Data/Diet/: BTree.hs  Map.hs  Nat.hs  Set.hs  Vicinity.hs
Data/Diet/.liquid/: Map.hs.1.smt2  Map.hs.bspec  Map.hs.cst.html  Map.hs.err  Map.hs.html  Map.hs.json  Map.hs.vim.annot
Data/Diet/Internal/: Debug.hs  Nat.hs  Set.hs  Tree.hs
Data/Diet/Internal/Interval/: Discrete.hs
Data/Diet/Interval/: Discrete.hs
Data/Interval/: Discrete.hs
nix/haskell/: diet.nix  quickcheck-classes.nix  semirings.nix
tests/: map-properties.hs  set-properties.hs
