name:              diet
version:           0.0.1
synopsis:          Discrete Interval Encoding Tree
description:       Discrete Interval Encoding Tree described by Martin Erwig in /Diets for Fat Sets, January 1993/.
homepage:          http://github.com/chessai/diet
bug-reports:       http://github.com/chessai/diet/issues
license:           BSD3
license-file:      LICENSE
author:            Tony Morris, Daniel Cartwright
maintainer:        Daniel Cartwright <dcartwright@layer3com.com>
category:          Data
build-type:        Simple
cabal-version:     >=1.10
tested-with:       GHC == 8.0.2
                 , GHC == 8.2.1
                 , GHC == 8.2.2

source-repository head
  type: git
  location: git://github.com/chessai/diet.git

library
  exposed-modules:
    Data.Diet.Set
    Data.Interval.Discrete

  build-depends:
    base           >= 4.0   && < 5.0,
    distributive   >= 0.2   && < 1.0

  if !impl(ghc >=8.0)
    build-depends: semigroups >= 0.11 && < 1.0
  
  ghc-options:     -Wall -O2

  default-language: Haskell2010

test-suite test
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        set-properties.hs
  build-depends:  base
                , diet
                , QuickCheck
                , quickcheck-classes
  default-language: Haskell2010
