name:              diet
version:           0.0.1
synopsis:          Discrete Interval Encoding Tree
description:       Discrete Interval Encoding Tree described by Martin Erwig in /Diets for Fat Sets, January 1993/.
homepage:          http://github.com/chessai/diet
bug-reports:       http://github.com/chessai/diet/issues
license:           BSD3
license-file:      LICENSE
author:            Tony Morris, Daniel Cartwright
maintainer:        Daniel Cartwright <dcartwright@layer3com.com>
category:          Data
build-type:        Simple
cabal-version:     >=1.10
tested-with:       GHC == 8.0.2
                 , GHC == 8.2.1
                 , GHC == 8.2.2

source-repository head
  type: git
  location: git://github.com/chessai/diet.git

library
  exposed-modules:
    Data.Diet.Map
  other-modules:
    Data.Diet.Internal.Set
    Data.Diet.Internal.Nat
  build-depends:
    base               >= 4.0     && < 5.0,
    discrete-intervals >= 0.0.3   && <= 0.1.0,
    semirings,
    transformers       >= 0.5.0.0 && <= 0.5.3.0  
  
  ghc-options:     -O2

  default-language: Haskell2010

test-suite test
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        map-properties.hs
  build-depends:
      base
    , diet
    , liquidhaskell 
    , QuickCheck
    , quickcheck-classes
    , discrete-intervals
    , random
    , random-shuffle
    , MonadRandom
  default-language: Haskell2010
